// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers tickerReducer should handle GET_TICKERS 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "cryptoUnits": Object {
      "bitcoin": Array [
        Object {
          "key": "btc",
          "value": "BTC",
        },
        Object {
          "key": "bits",
          "value": "bits",
        },
        Object {
          "key": "sats",
          "value": "satoshis",
        },
      ],
    },
    "fiatTicker": "USD",
    "fiatTickers": Array [
      "USD",
      "EUR",
      "JPY",
      "GBP",
      "CAD",
      "KRW",
      "AUD",
      "BRL",
      "CHF",
      "CLP",
      "CNY",
      "DKK",
      "HKD",
      "INR",
      "ISK",
      "NZD",
      "PLN",
      "RUB",
      "SEK",
      "SGD",
      "THB",
      "TWB",
      "UAH",
    ],
    "rates": null,
-   "tickerLoading": false,
+   "tickerLoading": true,
  }
`;

exports[`reducers tickerReducer should handle RECIEVE_TICKERS 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "cryptoUnits": Object {
      "bitcoin": Array [
        Object {
          "key": "btc",
          "value": "BTC",
        },
        Object {
          "key": "bits",
          "value": "bits",
        },
        Object {
          "key": "sats",
          "value": "satoshis",
        },
      ],
    },
    "fiatTicker": "USD",
    "fiatTickers": Array [
      "USD",
      "EUR",
      "JPY",
      "GBP",
      "CAD",
      "KRW",
      "AUD",
      "BRL",
      "CHF",
      "CLP",
      "CNY",
      "DKK",
      "HKD",
      "INR",
      "ISK",
      "NZD",
      "PLN",
      "RUB",
      "SEK",
      "SGD",
      "THB",
      "TWB",
      "UAH",
    ],
-   "rates": null,
+   "rates": Object {
+     "some": "data",
+   },
    "tickerLoading": false,
  }
`;

exports[`reducers tickerReducer should handle initial state 1`] = `
Object {
  "cryptoUnits": Object {
    "bitcoin": Array [
      Object {
        "key": "btc",
        "value": "BTC",
      },
      Object {
        "key": "bits",
        "value": "bits",
      },
      Object {
        "key": "sats",
        "value": "satoshis",
      },
    ],
  },
  "fiatTicker": "USD",
  "fiatTickers": Array [
    "USD",
    "EUR",
    "JPY",
    "GBP",
    "CAD",
    "KRW",
    "AUD",
    "BRL",
    "CHF",
    "CLP",
    "CNY",
    "DKK",
    "HKD",
    "INR",
    "ISK",
    "NZD",
    "PLN",
    "RUB",
    "SEK",
    "SGD",
    "THB",
    "TWB",
    "UAH",
  ],
  "rates": null,
  "tickerLoading": false,
}
`;
